[gd_scene load_steps=6 format=3 uid="uid://smxxaf128sk0"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_kxnmn"]
[ext_resource type="Theme" uid="uid://dupann3qkyje3" path="res://themes/pixel_98.tres" id="1_xdl22"]
[ext_resource type="PackedScene" uid="uid://c6fth4mtmu8c0" path="res://scenes/settings_menu.tscn" id="2_2df07"]
[ext_resource type="Script" path="res://scripts/setting_panel.gd" id="2_boipr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xka14"]
bg_color = Color(0.352941, 0.352941, 0.352941, 0.498039)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_kxnmn")

[node name="overlay" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 1.0
offset_right = 1282.0
offset_bottom = 721.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xka14")

[node name="SettingButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1217.0
offset_top = 18.0
offset_right = 1263.0
offset_bottom = 54.0
theme = ExtResource("1_xdl22")
text = "â˜°"

[node name="SettingPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 1136.0
offset_top = 59.0
offset_right = 1267.0
offset_bottom = 234.0
script = ExtResource("2_boipr")

[node name="SettingsMenu" parent="SettingPanel" instance=ExtResource("2_2df07")]
layout_mode = 1
offset_left = 1.0
offset_right = 1.0
offset_bottom = 1.0

[node name="InfoPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 783.0
offset_top = 288.0
offset_right = 1128.0
offset_bottom = 573.0
theme = ExtResource("1_xdl22")

[node name="InfoLabel" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 24.0
offset_top = 31.0
offset_right = 320.0
offset_bottom = 262.0
text = "A router is a device that connects two or more packet-switched networks or subnetworks. It serves two primary functions: managing traffic between these networks by forwarding data packets to their intended IP addresses, and allowing multiple devices to use the same Internet connection."
autowrap_mode = 2

[node name="InfoToggle" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 1176.0
offset_top = 660.0
offset_right = 1255.0
offset_bottom = 700.0
theme = ExtResource("1_xdl22")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Info"

[node name="ObjectivesToggle" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 11.0
offset_right = 163.0
offset_bottom = 42.0
theme = ExtResource("1_xdl22")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
button_pressed = true
text = "Objectives"

[node name="ObjectivesPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 41.0
offset_right = 169.0
offset_bottom = 311.0
theme = ExtResource("1_xdl22")

[node name="TitleLabel" type="Label" parent="ObjectivesPanel"]
layout_mode = 0
offset_left = 24.0
offset_top = 28.0
offset_right = 130.0
offset_bottom = 55.0
theme = ExtResource("1_xdl22")
theme_override_font_sizes/font_size = 22
text = "Objectives: "

[node name="ObjectivesLabel" type="Label" parent="ObjectivesPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 66.0
offset_right = 139.0
offset_bottom = 236.0
theme = ExtResource("1_xdl22")
theme_override_font_sizes/font_size = 18
text = "Connect all the
Routers!
Be wary of the 
Cable length
left!"
autowrap_mode = 3

[connection signal="pressed" from="SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="toggled" from="InfoToggle" to="." method="_on_info_toggle_toggled"]
[connection signal="toggled" from="ObjectivesToggle" to="." method="_on_objectives_toggle_toggled"]
